--- a/demo/src/App.scss
+++ b/demo/src/App.scss
@@ -6,6 +6,7 @@ body {
 body {
   position: fixed;
   background: #000;
+  color: white;
   margin: 0;
   width: 100vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
@@ -21,6 +22,14 @@ canvas {
   max-width: 100%;
 }
 
+.flex {
+  display: flex;
+}
+
+.controls {
+  margin-left: 20px;
+}
+
 button {
   border: 5px solid #111;
   padding: 5px;
@@ -31,5 +40,11 @@ button {
   &.active {
     border: 5px solid #222;
     background: #222;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .flex {
+    flex-direction: column-reverse;
   }
 }
